Add footer credit to restaurant.htmla
Added footer credit with author name

--- a/restaurant.html
+++ b/restaurant.html
@@ -94,6 +94,12 @@
             <div id="restaurantList" class="space-y-5"></div>
 
         </div>
+
+        <!-- Footer Credit -->
+        <div class="mt-8 pt-6 border-t border-gray-100 text-center">
+            <p class="text-gray-400 text-sm font-medium">Coding by Arnon Arpaket</p>
+        </div>
+
     </div>
 
     <script>
