--- a/restaurant.html
+++ b/restaurant.html
@@ -143,18 +143,19 @@
             showLoading(true);
             displayError(null);
 
-            // ตัดเรื่องการขอ URL ออกจาก Prompt เพื่อลดภาระ AI และลดความผิดพลาด
+            // เพิ่มเงื่อนไขข้อที่ 4 เพื่อกรองร้านที่ปิดออกไป
             const systemPrompt = `คุณคือ "Local Restaurant Scout" (นักสำรวจร้านอาหารท้องถิ่น)
                 
                 ข้อกำหนดสำคัญ:
                 1. กรองผลลัพธ์ให้ตรงตามเงื่อนไขที่ผู้ใช้ร้องขอเท่านั้น
                 2. ค้นหาร้านอาหารที่มีคะแนนรีวิวระหว่าง 4.0 ถึง 5.0 ดาวเท่านั้น
                 3. ค้นหาร้านอาหารที่อยู่ในระยะไม่เกิน 10 กิโลเมตร จากตำแหน่งที่ระบุ
-                4. ส่งคืนผลลัพธ์ในรูปแบบ JSON ที่กำหนดไว้เท่านั้น
-                5. เน้นความถูกต้องของชื่อร้าน เพื่อให้นำไปค้นหาต่อได้ง่าย
+                4. **สำคัญมาก:** ต้องตรวจสอบสถานะร้านค้า และคัดกรองเฉพาะร้านที่ "ยังเปิดให้บริการอยู่" เท่านั้น (ห้ามรวมร้านที่ระบุว่า Permanently closed หรือ Temporarily closed มาในรายการเด็ดขาด)
+                5. ส่งคืนผลลัพธ์ในรูปแบบ JSON ที่กำหนดไว้เท่านั้น
+                6. เน้นความถูกต้องของชื่อร้าน เพื่อให้นำไปค้นหาต่อได้ง่าย
             `;
 
-            const userQuery = `ค้นหาร้านอาหาร 5-10 แห่ง ใกล้ "${location}"`;
+            const userQuery = `ค้นหาร้านอาหาร 5-10 แห่ง ใกล้ "${location}" (คัดกรองร้านที่ปิดกิจการออกแล้ว)`;
 
             const payload = {
                 contents: [{ parts: [{ text: userQuery }] }],
