Update restaurant URL in index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 title: "Restaurant Finder",
                 description: "AI-powered tool to discover and categorize restaurant data.",
                 category: "Marketing",
-                url: "https://gemini.google.com/share/4a3a227caf57",
+                url: "https://dssnslfoods.github.io/DSS/restaurant.html",
                 icon: "search",
                 color: "from-pink-500 to-rose-500"
             },
