Change Financial Advisor URL to a base link
Updated the URL for the Financial Advisor project.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 title: "Financial Advisor",
                 description: "Interactive financial reporting and advisory dashboard.",
                 category: "IR Project",
-                url: "https://studio--studio-3888922975-640fd.us-central1.hosted.app/?reportId=dda7e54e-e973-4a14-81fe-08f58843cd86",
+                url: "https://studio--studio-3888922975-640fd.us-central1.hosted.app",
                 icon: "finance",
                 color: "from-emerald-500 to-teal-500"
             }
