Fix contribution percentage for Gen X
Corrected the contribution percentage for Gen X.

--- a/custbehave24_25.html
+++ b/custbehave24_25.html
@@ -101,7 +101,7 @@ const ExecutiveSummaryView = () => (
           The "Cash Cow" Strategy
         </h3>
         <p className="text-slate-600 leading-relaxed mb-4">
-          <strong className="text-slate-900">Gen X (45-59 ปี)</strong> ยังคงเป็นกระดูกสันหลังของรายได้ (Contribution {'>'} 50%) 
+          <strong className="text-slate-900">Gen X (45-59 ปี)</strong> ยังคงเป็นกระดูกสันหลังของรายได้ (Contribution &gt; 50%) 
           แม้การเติบโตจะไม่หวือหวาเท่ากลุ่มอื่น แต่มีความเสถียรสูง
         </p>
         <div className="bg-indigo-50 p-4 rounded-xl">
