--- a/hrmanager.html
+++ b/hrmanager.html
@@ -24,11 +24,48 @@
 <body class="text-slate-800 p-4 md:p-8">
 
     <header class="max-w-6xl mx-auto mb-8 text-center">
+        <!-- ADDED: Credit at the top as requested -->
+        <div class="inline-block bg-slate-100 rounded-full px-4 py-1 mb-4 border border-slate-200 shadow-sm">
+            <span class="text-xs text-slate-600 font-bold tracking-wider uppercase">
+                <i class="fa-solid fa-chart-simple mr-2 text-blue-500"></i>Data support and analyzed by DSS NSL
+            </span>
+        </div>
         <h1 class="text-3xl font-bold text-slate-900 uppercase tracking-wide">Balanced Scorecard (30-Point Analysis)</h1>
         <p class="text-slate-500 mt-2">Factory Manager Candidate Assessment | Full Score: 150</p>
     </header>
 
     <main class="max-w-6xl mx-auto space-y-8">
+
+        <!-- Methodology Section -->
+        <section class="card p-6 border-l-4 border-purple-600 bg-purple-50">
+            <h3 class="text-xl font-bold text-purple-900 mb-3"><i class="fa-solid fa-book-open mr-2"></i>Methodology & Theoretical Framework</h3>
+            <p class="text-sm text-slate-700 mb-4">
+                การวิเคราะห์ครั้งนี้ประยุกต์ใช้ทฤษฎี <strong>Balanced Scorecard (BSC)</strong> ของ <em>Dr. Robert Kaplan</em> และ <em>Dr. David Norton</em> 
+                โดยนำมาปรับใช้ในบริบทของ <strong>Strategic HR Recruitment (HR Scorecard)</strong> เพื่อประเมินผู้สมัครใน 4 มิติสำคัญที่ส่งผลต่อความสำเร็จขององค์กร:
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-sm">
+                <div class="bg-white p-3 rounded border border-purple-200 shadow-sm">
+                    <strong class="text-purple-700 block mb-1">1. Financial Perspective</strong>
+                    <span class="text-slate-500">ทฤษฎีดั้งเดิม: การเงิน</span><br>
+                    <span class="text-slate-800">HR Adapt: ความคุ้มค่าในการจ้าง (Cost Efficiency & ROI)</span>
+                </div>
+                <div class="bg-white p-3 rounded border-purple-200 shadow-sm">
+                    <strong class="text-purple-700 block mb-1">2. Internal Process</strong>
+                    <span class="text-slate-500">ทฤษฎีดั้งเดิม: กระบวนการภายใน</span><br>
+                    <span class="text-slate-800">HR Adapt: ทักษะเทคนิคและการทำงาน (Technical Competency)</span>
+                </div>
+                <div class="bg-white p-3 rounded border-purple-200 shadow-sm">
+                    <strong class="text-purple-700 block mb-1">3. Customer Perspective</strong>
+                    <span class="text-slate-500">ทฤษฎีดั้งเดิม: ลูกค้า</span><br>
+                    <span class="text-slate-800">HR Adapt: การตอบสนองผู้มีส่วนได้ส่วนเสีย (Stakeholder Management)</span>
+                </div>
+                <div class="bg-white p-3 rounded border-purple-200 shadow-sm">
+                    <strong class="text-purple-700 block mb-1">4. Learning & Growth</strong>
+                    <span class="text-slate-500">ทฤษฎีดั้งเดิม: การเรียนรู้</span><br>
+                    <span class="text-slate-800">HR Adapt: ศักยภาพและภาวะผู้นำ (Leadership & Potential)</span>
+                </div>
+            </div>
+        </section>
 
         <!-- Executive Summary of Scores -->
         <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
