--- a/candidate_question_factorymanager.html
+++ b/candidate_question_factorymanager.html
@@ -30,7 +30,7 @@
     <header class="nsl-gradient text-white shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center gap-3">
-                <div class="bg-white text-orange-600 p-2 rounded-lg font-bold text-xl w-10 h-10 flex items-center justify-center">N</div>
+                <img src="logo-NSL.png" alt="NSL Foods Logo" class="h-12 w-auto bg-white rounded p-1 shadow-sm">
                 <div>
                     <h1 class="text-xl md:text-2xl font-bold">NSL Foods PLC.</h1>
                     <p class="text-xs md:text-sm text-orange-100">Factory Manager Interview</p>
