Implement audio button for question reading
Added audio button functionality to speak questions based on category.

--- a/candidate_question_factorymanager.html
+++ b/candidate_question_factorymanager.html
@@ -82,11 +82,16 @@
 
         <!-- Question Card -->
         <div id="question-card" class="bg-white w-full rounded-2xl shadow-xl border border-gray-100 p-6 md:p-10 card-enter relative min-h-[400px] flex flex-col">
-            <!-- Badge -->
-            <div class="mb-4">
+            <!-- Badge & Audio Button Header -->
+            <div class="flex justify-between items-start mb-4">
                 <span id="q-badge" class="inline-block px-3 py-1 rounded-full text-xs font-semibold bg-blue-100 text-blue-800">
                     Category
                 </span>
+                
+                <!-- Audio Button (Default Hidden) -->
+                <button id="btn-speak" onclick="speakQuestion()" class="hidden text-gray-500 hover:text-orange-600 transition-colors focus:outline-none flex items-center gap-2 text-sm font-medium px-2 py-1 rounded hover:bg-orange-50">
+                    <i class="fas fa-volume-up text-lg"></i> <span class="hidden sm:inline">ฟังคำถาม (Listen)</span>
+                </button>
             </div>
 
             <!-- Question Text -->
@@ -379,6 +384,7 @@
         const progressBar = document.getElementById('progress-bar');
         const progressText = document.getElementById('progress-text');
         const categoryLabel = document.getElementById('category-label');
+        const btnSpeak = document.getElementById('btn-speak');
 
         function renderQuestion() {
             const q = questions[currentIndex];
@@ -400,6 +406,13 @@
             if(q.category === 'english') badgeClass = 'bg-pink-100 text-pink-800';
             if(q.category === 'scenario') badgeClass = 'bg-red-100 text-red-800';
             qBadge.className = `inline-block px-3 py-1 rounded-full text-xs font-semibold ${badgeClass}`;
+
+            // Show/Hide Speak Button
+            if (q.category === 'english') {
+                btnSpeak.classList.remove('hidden');
+            } else {
+                btnSpeak.classList.add('hidden');
+            }
 
             // Category Label Top
             categoryLabel.innerText = q.categoryName;
@@ -447,7 +460,26 @@
             }
         }
 
+        function speakQuestion() {
+            const q = questions[currentIndex];
+            // Only speak question text by default (strip HTML tags)
+            const div = document.createElement("div");
+            div.innerHTML = q.question;
+            const textToSpeak = div.textContent || div.innerText || "";
+
+            if ('speechSynthesis' in window) {
+                window.speechSynthesis.cancel(); // Cancel previous speech
+                const utterance = new SpeechSynthesisUtterance(textToSpeak);
+                utterance.lang = 'en-US'; 
+                utterance.rate = 0.9;
+                window.speechSynthesis.speak(utterance);
+            } else {
+                alert("Browser does not support text-to-speech.");
+            }
+        }
+
         function nextQuestion() {
+            if ('speechSynthesis' in window) window.speechSynthesis.cancel();
             if (currentIndex < questions.length - 1) {
                 currentIndex++;
                 renderQuestion();
@@ -457,6 +489,7 @@
         }
 
         function prevQuestion() {
+            if ('speechSynthesis' in window) window.speechSynthesis.cancel();
             if (currentIndex > 0) {
                 currentIndex--;
                 renderQuestion();
