--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
 
         const INITIAL_APPS = [
           {
+            id: 5,
+            title: "Sustainability Financial Impact",
+            description: "Analyze the financial implications and ROI of sustainability initiatives (SD).",
+            category: "Analytics",
+            url: "", 
+            icon: "globe",
+            color: "from-emerald-600 to-green-500",
+            badge: "New Report",
+            options: [
+              { label: "SD Financial Impact 2024-2025", url: "https://dssnslfoods.github.io/DSS/report4_sd.html" }
+            ]
+          },
+          {
             id: 4,
             title: "Candidate Interview",
             description: "Select a position below to launch the specific interview question set.",
