--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Babel for JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <!-- Basic Font Config -->
+    <!-- Custom Tailwind Config -->
     <script>
         tailwind.config = {
             theme: {
