--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        const { useState, useEffect, useRef } = React;
+        // Removed unused useRef
+        const { useState, useEffect } = React;
 
         // --- ICONS ---
         const IconWrapper = ({ children, size = 24, className = "" }) => (
